--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
 
 <body>
@@ -27,9 +26,9 @@
           <div class="inner">
             <h3 class="masthead-brand">Tessa Srebro</h3>
             <ul class="nav masthead-nav">
-              <li class="active"><a href="#">Home</a>
+              <li class="active"><a href="index.html">Home</a>
               </li>
-              <li><a href="#">About</a>
+              <li><a href="about-project.html">About</a>
               </li>
               <li><a href="#">Contact</a>
               </li>
@@ -64,8 +63,8 @@
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="assets/js/bootstrap/affix.js"></script>
-  <script src="assets/js/bootstrap/dropdown.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 
