Update words.json ajax call and CSS

--- a/about-project.html
+++ b/about-project.html
@@ -36,9 +36,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="about-project.html">About</a>
+                    <li class="active"><a href="about-project.html">About</a>
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
