--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="lead">Is your word overused by nonprofits? Type it in the box to find out.*</p>
           <div id="word-search"></div>
           <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            <a href="about-project.html" class="btn btn-lg btn-default">Learn more</a>
           </p>
         </div>
 
