Fix Metadata in HTML

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="We created The Marketplace of Words so that nonprofits can get the most value out of their words. We counted the words nonprofits use on their websites, and found the 1000 most frequently used adjectives, adverbs, nouns and verbs. We also looked at which pronouns nonprofits use the most on their websites.">
+    <meta name="author" content="Tessa Srebro">
   <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-  <title>Cover Template for Bootstrap</title>
+  <title>The Marketplace of Words</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
