--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <h3 class="masthead-brand">Tessa Srebro</h3>
             <ul class="nav masthead-nav">
               <li class="active"><a href="index.html">Home</a>
+              <li><a href="results.html">Results</a>
               </li>
               <li><a href="about-project.html">About</a>
               </li>
