--- a/results.html
+++ b/results.html
@@ -9,10 +9,11 @@
     <meta name="author" content="Tessa Srebro">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>The Marketplace of Words - About the project</title>
+    <title>The Marketplace of Words - Results</title>
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/jquery.dynatable.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,8 +39,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="results.html">Results</a>
-                    <li class="active"><a href="about-project.html">About</a>
+                    <li class="active"><a href="results.html">Results</a>
+                    <li><a href="about-project.html">About</a>
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
@@ -51,16 +52,31 @@
 
     <div id="main">
       <div class="container">
-        <h1>About the project</h1>
-        <p class="lead">
-          Imagine you’re at your local market to get ingredients for some thirst -quenching, homemade lemonade. As you’re picking out lemons, you notice that they’re more expensive than usual. You vaguely remember hearing about a lemon shortage this season – that must be the reason for the higher price. It’s basic supply and demand – the less lemons there are, the more demand there is for lemons. Thus, their value, or price, goes up. If there were a surplus of lemons instead, you could expect to pay less for your lemonade.
-        </p>
-        <p class="lead">
-          You might not think of words as commodities (like lemons), but in a way, they are. If everyone is using the same words, their value goes down. Why? The human brain is wired to pay attention to new information and overlook the old. We stop noticing the same, tired language. Thus, the overused words lose their value.
-        </p>
-        <p class="lead">
-          We created The Marketplace of Words so that nonprofits can get the most value out of their words. We counted the words nonprofits use on their websites, and found the 1000 most frequently used adjectives, adverbs, nouns and verbs. We also looked at which pronouns nonprofits use the most on their websites.
-        </p>
+        <h1>Results</h1>
+        <table id="results-table" class="table table-hover">
+          <thead>
+            <th data-dynatable-column="Word">
+              Word
+            </th>
+            <th data-dynatable-column="Adj Count">
+              Adj Count
+            </th>
+            <th data-dynatable-column="Adv Count">
+              Adv Count
+            </th>
+            <th data-dynatable-column="Noun Count">
+              Noun Count
+            </th>
+            <th data-dynatable-column="Verb Count">
+              Verb Count
+            </th>
+            <th data-dynatable-column="Total Count">
+              Total Count
+            </th>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
     </div>
     <!-- /.container -->
@@ -70,11 +86,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
-
-
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.dynatable.js"></script>
+    <script src="assets/js/results.js"></script>
 </body>
 
 </html>
