Add results page by percentage

--- a/results-percent.html
+++ b/results-percent.html
@@ -53,27 +53,27 @@
     <div id="main">
       <div class="container">
         <h1>Results</h1>
-        <p class="lead-text">These are the total number of times words appeared in a sample size of 384 nonprofit websites.</p>
-        <p class="lead-text">Compare words by <a href="results-percent.html">percentage</a>.</p>
+        <p class="lead-text">These are the percentage of nonprofit websites that use the word at least once.</p>
+        <p class="lead-text">Compare words by <a href="results.html">frequency</a>.</p>
         <table id="results-table" class="table table-hover">
           <thead>
             <th data-dynatable-column="Word">
               Word
             </th>
-            <th data-dynatable-column="Adj Count">
-              Adj Count
+            <th data-dynatable-column="Adj %">
+              Adj %
             </th>
-            <th data-dynatable-column="Adv Count">
-              Adv Count
+            <th data-dynatable-column="Adv %">
+              Adv %
             </th>
-            <th data-dynatable-column="Noun Count">
-              Noun Count
+            <th data-dynatable-column="Noun %">
+              Noun %
             </th>
-            <th data-dynatable-column="Verb Count">
-              Verb Count
+            <th data-dynatable-column="Verb %">
+              Verb %
             </th>
-            <th data-dynatable-column="Total Count">
-              Total Count
+            <th data-dynatable-column="Total %">
+              Total %
             </th>
           </thead>
           <tbody>
@@ -91,7 +91,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.dynatable.js"></script>
-    <script src="assets/js/results.js"></script>
+    <script src="assets/js/results-percent.js"></script>
 </body>
 
 </html>
