--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <div class="inner">
             <h3 class="masthead-brand">Tessa Srebro</h3>
             <ul class="nav masthead-nav">
-              <li class="active"><a href="index.html">Home</a>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="getting_started.html">Getting Started</a></li>
               <li><a href="results.html">Results</a>
               </li>
               <li><a href="about-project.html">About</a>
