--- a/results.html
+++ b/results.html
@@ -39,6 +39,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
+                    <li><a href="getting_started.html">Getting Started</a></li>
                     <li class="active"><a href="results.html">Results</a>
                     <li><a href="about-project.html">About</a>
                     </li>
