Add team page and change css

--- a/about-project.html
+++ b/about-project.html
@@ -38,11 +38,11 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="getting_started.html">Getting Started</a></li>
-                    <li><a href="results.html">Results</a>
                     <li class="active"><a href="about-project.html">About</a>
                     </li>
-                    <li><a href="#contact">Contact</a>
+                    <li><a href="getting_started.html">Getting Started</a></li>
+                    <li><a href="results.html">Results</a>
+                    <li><a href="team.html">Team</a>
                     </li>
                 </ul>
             </div>
