--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
       <div class="cover-container">
         <div class="masthead clearfix">
           <div class="inner">
-            <h3 class="masthead-brand">Tessa Srebro</h3>
             <ul class="nav masthead-nav">
               <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="about-project.html">About</a>
+              </li>
               <li><a href="getting_started.html">Getting Started</a></li>
               <li><a href="results.html">Results</a>
               </li>
-              <li><a href="about-project.html">About</a>
-              </li>
-              <li><a href="#">Contact</a>
+              <li><a href="team.html">Team</a>
               </li>
             </ul>
           </div>
