--- a/results-percent.html
+++ b/results-percent.html
@@ -39,11 +39,11 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="getting_started.html">Getting Started</a></li>
-                    <li class="active"><a href="results.html">Results</a>
                     <li><a href="about-project.html">About</a>
                     </li>
-                    <li><a href="#contact">Contact</a>
+                    <li><a href="getting_started.html">Getting Started</a></li>
+                    <li class="active"><a href="results.html">Results</a>
+                    <li><a href="team.html">Team</a>
                     </li>
                 </ul>
             </div>
