Changes from Tess's comments

--- a/getting_started.html
+++ b/getting_started.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">The Marketplace of Words</a>
+                <span class="navbar-brand">The Marketplace of Words</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -57,7 +57,7 @@
           <strong>Test the value of your words.</strong> Type your word into the box on our <a href="index.html">homepage</a>, and see if it made the list of most common nonprofit words. If it appears on the list, think critically if it’s a word your organization should use.
         </p>
         <p class="lead text-left">
-          <strong>Review the lists.</strong> Read over the <a href="results.html">results</a> from the The Marketplace of Words research. You’ll get a good idea of which words nonprofits are overusing, and how many nonprofits are overusing them.
+          <strong>Review the lists.</strong> Explore the <a href="results.html">results</a> from the The Marketplace of Words research. You’ll get a good idea of which words nonprofits are overusing, and how many nonprofits are overusing them.
         </p>
         <p class="lead text-left">
           <strong>Find your own words.</strong> Nonprofit communications expert <a href="http://www.claxonmarketing.com/about/about-erica/">Erica Mills</a> created this handy <a href="http://www.slideshare.net/ClaxonMarketing/org-lexicon-v1">Organizational Lexicon tool</a>. Fill it out with The Marketplace of Words by your side. Before you know it, you’ll have unique, specific and easy to understand words to describe your organization and explain your cause. For suggestions on choosing your words, read our tips section below.
