--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">The Marketplace of Words</a>
+                <span class="navbar-brand">The Marketplace of Words</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
