--- a/about-project.html
+++ b/about-project.html
@@ -54,14 +54,17 @@
       <div class="container">
         <h1>About the project</h1>
         <p class="lead text-left">
-          Imagine you’re at your local market to get ingredients for some thirst -quenching, homemade lemonade. As you’re picking out lemons, you notice that they’re more expensive than usual. You vaguely remember hearing about a lemon shortage this season – that must be the reason for the higher price. It’s basic supply and demand – the less lemons there are, the more demand there is for lemons. Thus, their value, or price, goes up. If there were a surplus of lemons instead, you could expect to pay less for your lemonade.
+					We created The Marketplace of Words so that nonprofits can get the most value out of their words. We counted the words nonprofits use on their websites, and found the 1000 most frequently used adjectives, adverbs, nouns and verbs. We also looked at which pronouns nonprofits use the most on their websites.
+        </p>
+        <p class="lead text-left">
+					Why should you want to know the value of words? Imagine you’re at your local market to get ingredients for some thirst -quenching, homemade lemonade. As you’re picking out lemons, you notice that they’re more expensive than usual. You vaguely remember hearing about a lemon shortage this season – that must be the reason for the higher price. It’s basic supply and demand – the less lemons there are, the more demand there is for lemons. Thus, their value, or price, goes up. If there were a surplus of lemons instead, you could expect to pay less for your lemonade.
         </p>
         <p class="lead text-left">
           You might not think of words as commodities (like lemons), but in a way, they are. If everyone is using the same words, their value goes down. Why? The human brain is wired to pay attention to new information and overlook the old. We stop noticing the same, tired language. Thus, the overused words lose their value.
         </p>
-        <p class="lead text-left">
-          We created The Marketplace of Words so that nonprofits can get the most value out of their words. We counted the words nonprofits use on their websites, and found the 1000 most frequently used adjectives, adverbs, nouns and verbs. We also looked at which pronouns nonprofits use the most on their websites.
-        </p>
+				<p class="lead text-left">
+					Just like only you can know if you want to pay top dollar for a lovely lemon, only you can decide which words you want to use. Now you can find out the value of the word, and make an informed decision!
+				</p>
       </div>
     </div>
     <!-- /.container -->
