Update Getting started page

--- a/getting_started.html
+++ b/getting_started.html
@@ -54,10 +54,10 @@
       <div class="container">
         <h1>How to Use the Marketplace</h1>
         <p class="lead text-left">
-          <strong>Test the value of your words.</strong> Type your word into the box on our <a href="index.html">homepage</a>, and see if it made the list of most common nonprofit words. If it appears on the list, think critically if it’s a word your organization should use.
+          <strong>Test the value of your words.</strong> Type your word into the box on our <a href="index.html">homepage</a>, and see if it made the list of most common nonprofit words. If it appears on the list, think critically if it’s a word your organization should use. Just because it’s on the list doesn’t mean you shouldn’t use it, but you should consider all your options to make sure it’s the best.
         </p>
         <p class="lead text-left">
-          <strong>Review the lists.</strong> Explore the <a href="results.html">results</a> from the The Marketplace of Words research. You’ll get a good idea of which words nonprofits are overusing, and how many nonprofits are overusing them.
+          <strong>Review the lists.</strong> Explore the <a href="results.html">full results</a> from the The Marketplace of Words research. You’ll get a good idea of which words nonprofits are overusing, and how many nonprofits are overusing them.
         </p>
         <p class="lead text-left">
           <strong>Find your own words.</strong> Nonprofit communications expert <a href="http://www.claxonmarketing.com/about/about-erica/">Erica Mills</a> created this handy <a href="http://www.slideshare.net/ClaxonMarketing/org-lexicon-v1">Organizational Lexicon tool</a>. Fill it out with The Marketplace of Words by your side. Before you know it, you’ll have unique, specific and easy to understand words to describe your organization and explain your cause. For suggestions on choosing your words, read our tips section below.
@@ -76,7 +76,7 @@
           <strong>Get specific.</strong> What do you actually mean when you say <em>community</em>? How big is it and who is a part of it? There are so many methods of <em>outreach</em>; which are you referring to? If questions like this can be asked, chances are you’re using words that aren’t specific enough. Just because you know exactly which <em>community</em> you mean, don’t expect that your audience will.
         </p>
         <p class="lead text-left">
-          <strong>Talk about your audience.</strong> Based on the pronouns nonprofits use, it’s clear they’re talking about themselves too much. <em>We</em> do this at <em>our</em> organization. Try involving your audience with some <em>yous</em>. Because without support from outside your organization, your organization wouldn’t exist.
+          <strong>Talk about your audience.</strong> Based on the pronouns nonprofits use, it’s clear they’re talking about themselves too much. (Nonprofit use we and our nearly 20% more often than you and your! We do this at our organization. Try involving your audience with some yous. Because without support from outside your organization, your organization wouldn’t exist.
         </p>
       </div>
     </div>
