--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div class="site-wrapper">
+  <div class="site-wrapper image-bg">
     <div class="site-wrapper-inner">
       <div class="cover-container">
         <div class="masthead clearfix">
