Add a "view results" button on the landing page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <div id="word-search"></div>
           <p class="lead">
             <a href="about-project.html" class="btn btn-lg btn-default">Learn more</a>
+						<a href="results.html" class="btn btn-lg btn-default">View results</a>
           </p>
         </div>
 
