Update Erica and Tess's profile pics

--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
       <div class="container">
         <h1>About the team</h1>
         <div class="row team-row">
-          <img class="col-lg-3 col-md-3 col-sm-3" src="assets/images/TessPic.jpg" />
+          <img class="col-lg-3 col-md-3 col-sm-3" src="assets/images/TessPic2.jpg" />
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Tessa (Tess) Srebro</h2>
             <p class="lead-text text-left">
@@ -63,11 +63,11 @@
           </div>
         </div>
         <div class="row team-row">
-          <img class="col-lg-3 col-md-3 col-sm-3" src="https://pbs.twimg.com/profile_images/251089925/Erica_big.JPG" />
+          <img class="col-lg-3 col-md-3 col-sm-3" src="assets/images/EricaMills.jpg" />
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Erica Mills</h2>
             <p class="lead-text text-left">
-              Erica Mills envisioned a tool where nonprofits could access data on word usage to make informed decisions about their word choice. 
+							Erica Mills is an internationally recognized expert on how to use words to make the world a better place. She’s came up with the concept of the Marketplace of Words about two years ago and is over the moon that the theory has turned into a practical tool nonprofits can use. She heads up Claxon, a company on a mission to teach those doing good how to get noticed. Erica is the author of the book: Pitchfalls: why bad pitches happen to good people. She is on faculty at the University of Washington and Seattle University (where she met Tess!). Mills is a lover of words in general, and verbs and adverbs in particular.
             </p>
           </div>
         </div>
