Fix Erica's bio

--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">The Marketplace of Words</a>
+                <span class="navbar-brand">The Marketplace of Words</span>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -67,7 +67,7 @@
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Erica Mills</h2>
             <p class="lead-text text-left">
-							Erica Mills is an internationally recognized expert on how to use words to make the world a better place. She’s came up with the concept of the Marketplace of Words about two years ago and is over the moon that the theory has turned into a practical tool nonprofits can use. She heads up Claxon, a company on a mission to teach those doing good how to get noticed. Erica is the author of the book: Pitchfalls: why bad pitches happen to good people. She is on faculty at the University of Washington and Seattle University (where she met Tess!). Mills is a lover of words in general, and verbs and adverbs in particular.
+							Erica Mills is an internationally recognized expert on how to use words to make the world a better place. She came up with the concept of the Marketplace of Words about two years ago and is over the moon that the theory has turned into a practical tool nonprofits can use. She heads up Claxon, a company on a mission to teach those doing good how to get noticed. Erica is the author of the book: Pitchfalls: why bad pitches happen to good people. She is on faculty at the University of Washington and Seattle University (where she met Tess!). Mills is a lover of words in general, and verbs and adverbs in particular.
             </p>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Samiur Rahman</h2>
             <p class="lead-text text-left">
-              When brainstorming how to collect the data for The Marketplace of Words, Tess realized she was lucky enough to be married to a Data Scientist. Samiur created the program that scanned nonprofits’ websites collecting words. He also help make this website you’re reading right now. For more about Samiur, visit his <a href="http://samiurr.com">website</a>, or contact him on <a href="http://twitter.com/samiur1204">Twitter</a>. 
+              When brainstorming how to collect the data for The Marketplace of Words, Tess realized she was lucky enough to be married to a Data Scientist. Samiur created the program that scanned nonprofits’ websites collecting words. He also help make this website you’re reading right now. For more about Samiur, visit his <a href="http://samiurr.com">website</a>, or contact him on <a href="http://twitter.com/samiur1204">Twitter</a>.
             </p>
           </div>
         </div>
