Add styles to Landing page subheading

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="inner cover">
           <h1 class="cover-heading">The Marketplace of Words</h1>
-          <h3>Raise the Value of Your Words</h3>
+          <h3 class="cover-subheading">Raise the Value of Your Words</h3>
           <p class="lead">Is your word overused by nonprofits? Type it in the box to find out.*</p>
           <div id="word-search"></div>
           <p class="lead">
