--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>The Marketplace of Words</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="/assets/css/main.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
