Add PDF link to Getting Started page

--- a/getting_started.html
+++ b/getting_started.html
@@ -63,7 +63,7 @@
           <strong>Find your own words.</strong> Nonprofit communications expert <a href="http://www.claxonmarketing.com/about/about-erica/">Erica Mills</a> created this handy <a href="http://www.slideshare.net/ClaxonMarketing/org-lexicon-v1">Organizational Lexicon tool</a>. Fill it out with The Marketplace of Words by your side. Before you know it, you’ll have unique, specific and easy to understand words to describe your organization and explain your cause. For suggestions on choosing your words, read our tips section below.
         </p>
         <p class="lead text-left">
-          <strong>Read the full research discussion.</strong> Feeling ambitious? Have some time to kill? Read the full report on The Marketplace of Words, created by Seattle University Master of Nonprofit Leadership student Tessa Srebro. Learn how the research was carried out, and see full recommendations on using the results.
+          <strong>Read the full research discussion.</strong> Feeling ambitious? Have some time to kill? Read the <a href="https://s3-us-west-2.amazonaws.com/marketplace-of-words/The+Marketplace+of+Words+Paper_TSrebro.pdf">full report</a> on The Marketplace of Words, created by Seattle University Master of Nonprofit Leadership student Tessa Srebro. Learn how the research was carried out, and see full recommendations on using the results.
         </p>
         <h1>Tips</h1>
         <p class="lead text-left">
