About Project: Add paragraph about research
- Add a paragraph that contains information about research

--- a/about-project.html
+++ b/about-project.html
@@ -66,6 +66,12 @@
 					Just like only you can know if you want to pay top dollar for a lovely lemon, only you can decide which words you want to use. Now you can find out the value of the word, and make an informed decision!
 				</p>
       </div>
+      <div class="container">
+        <h1>About the research</h1>
+        <p class="lead text-left">
+        Our data is based on a sample size of 384 nonprofit websites, randomly selected from the Internal Revenue Service's list of registered 501(c)3s as of April 2014. Confidence intervals are less than +/-5 % with 95% confidence.
+        </p>
+      </div>
     </div>
     <!-- /.container -->
 
