Team page: Change Tess's bio
- Modify the bio of Tess on the team page

--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
           <div class="col-lg-8 col-md-8 col-sm-8 col-offset-lg-1 col-offset-md-1 col-offset-sm-1">
             <h2>Tessa (Tess) Srebro</h2>
             <p class="lead-text text-left">
-              While working on her Master of Nonprofit Leadership degree at Seattle University, Tess recognized that she could use her love of writing and words to serve nonprofits. And she got really excited. So, after hearing about the vision of The Marketplace of Words, Tess jumped at the opportunity to create what you see here today. Find her on <a href="https://twitter.com/poet_tess">Twitter</a>, <a href="https://www.linkedin.com/in/tsrebro">LinkedIn</a> or send an <a href="t.srebro@gmail.com">e-mail</a>.
+              Tess is fascinated by the role language plays in culture, society, and the world at large. While working on her Master of Nonprofit Leadership degree at Seattle University, Tess discovered that she could use her love of words to serve nonprofits. And she got really excited. So, after hearing about the vision of The Marketplace of Words, Tess jumped at the opportunity to conduct the research for and spearhead the creation of the tool you see here today. Learn more about Tess by visiting <a href="http://www.tessasrebro.com">tessasrebro.com</a>
             </p>
           </div>
         </div>
