--- a/results.html
+++ b/results.html
@@ -20,6 +20,16 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53338718-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
@@ -42,7 +52,7 @@
                     <li><a href="about-project.html">About</a>
                     </li>
                     <li><a href="getting_started.html">Getting Started</a></li>
-                    <li class="active"><a href="results.html">Results</a>             
+                    <li class="active"><a href="results.html">Results</a>
                     <li><a href="team.html">Team</a>
                     </li>
                 </ul>
