--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
           <h3 class="cover-subheading">Raise the Value of Your Words</h3>
           <p class="lead">Is your word overused by nonprofits? Type it in the box to find out.*</p>
           <div id="word-search"></div>
-          <p class="lead">
-            <a href="about-project.html" class="btn btn-lg btn-default">Learn more</a>
-						<a href="results.html" class="btn btn-lg btn-default">View results</a>
-          </p>
+
         </div>
       </div>
+      <div class="main-buttons">
+      <p class="lead">
+        <a href="results.html" class="btn btn-lg btn-default">Browse the full results</a>
+        <a href="about-project.html" class="btn btn-lg btn-default">Learn about this project</a>
+      </p>
+    </div>
           <div class="mastfoot">
           <p>
             *Nouns, verbs, adjectives and adverbs only. Please only use the root form of the word. For example, 'give' instead of 'gave' or 'giving'.
