Marketplace of Words Button
Changed Marketplace of Words to button linking to homepage

--- a/about-project.html
+++ b/about-project.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">The Marketplace of Words</a>
+                <span class="navbar-brand"><a href="index.html">The Marketplace of Words</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
