--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">The Marketplace of Words</span>
+                <span class="navbar-brand"><a href="index.html">The Marketplace of Words</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -91,9 +91,6 @@
           </div>
         </div>
         <div class="row team-row">
-          <p class="lead-text">
-            Also, many thanks to Sarah Healy and Maureen Feit.
-          </p>
         </div>
       </div>
     </div>
