--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="/assets/css/main.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
