--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
       </div>
     </div>
 </div>
+<div class="connect">
+  <a href="http://www.linkedin.com/in/tsrebro/"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  <a href="http://www.twitter.com/poet_tess"><i class="fa fa-twitter-square fa-2x"></i></a>
+  <a href="mailto:t.srebro@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+</div>
 
 
 
